--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <html>
 <head>
-	<title>FREE PUNJABI SEX VIDEO</title>
+	<title>very cool website</title>
 </head>
 <body>
-	<center>
-		<h1>HELLO MY NAME IS ANANTOLP, WELCOME TO MY EPIC PAGE ON THE WORLD WIDE WEB</h1>
-	<h2>SUBSCRIBE TO MY ONLYFANS</h2>
-	<p>I LOVE DOGS</p>
-	<img src="https://i.ytimg.com/vi/9eGJ4bNtpBs/hqdefault.jpg">
-	<p>LOOK AT THIS CUTE WOOFER</p>
-	<iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-	<p>I REALLY LOVE RICK GUYS HOLY SHIT RICK IS SO POGGERS</p>
-	<p>COPYRIGHT MY DICK 2020</p>
+<h1> Bienvenue sur mon site anto.cool sur le WWW (world wide web)<h1>
+<img src="assets/singe.png"> 
+<h3> Î le singe FOU !!!i! (ce singe montre plusieurs signes de demence sevère) <h3>
+<h2> Je suis feru de jeux musicaux tel que 
+	<a href="https://scoresaber.com/u/76561198121730751&sort=1">beat saber</a>, 
+	<a href="https://etternaonline.com/user/lpanto"> etterna</a> ou encore
+	<a href="https://osu.ppy.sh/users/13001817"> le jeu de cercle osu </a>
+	ainsi qu'un aficionados inveteré.
+<h2>
+<img src="assets/kemarpirate.jpeg"> 
+<h1> astalavista !!! <h1>
 </body>
 </html>
