--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-
 <html>
 <head>
 	<title>very cool website</title>
 </head>
-<body>
+<body background="assets/background.gif">
+<audio src="image/musique.mp3" autoplay> camarchepas </audio>
 <h1> Bienvenue sur mon site anto.cool sur le WWW (world wide web)<h1>
 <img src="assets/singe.png"> 
 <h3> Î le singe FOU !!!i! (ce singe montre plusieurs signes de demence sevère) <h3>
@@ -15,6 +15,6 @@
 <h2>
 <h1> astalavista !!! <h1>
 <img src="assets/kemarpirate.jpeg"> 
-<h1> ciao la compagnie ! <h1>
+<h1> aller tciao la compagnie ! <h1>
 </body>
 </html>
