ajout d'un compteur
js

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 	<a href="https://osu.ppy.sh/users/13001817"> le jeu de cercle osu </a>
 	ainsi qu'un aficionados inveteré.
 <h2>
+<h1> Temps restant avant l'hiver :<h1>
+<script src="js/coutdownwinter.js"></script>
 <h1> astalavista !!! <h1>
 <img src="assets/kemarpirate.jpeg"> 
 <h1> aller tciao la compagnie ! <h1>
