fixed shitty syntax error

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<title>very cool website</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" href="main.css">
+	<script src="js/coutdownwinter.js"></script>
 </head>
 <body background="assets/background.gif">
 <audio src="image/musique.mp3" autoplay> camarchepas </audio>
@@ -16,7 +17,7 @@
 	ainsi qu'un aficionados inveteré.
 <h2>
 <h1> Temps restant avant l'hiver :<h1>
-<script src="js/coutdownwinter.js"></script>
+<p id="compteur"></p>
 <h1> astalavista !!! <h1>
 <img src="assets/kemarpirate.jpeg"> 
 <h1> aller tciao la compagnie ! <h1>
