--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	ainsi qu'un aficionados inveteré.
 <h2>
 <h1> Temps restant avant l'hiver (ma saison préferé hihi ^^):<h1>
-<p id="compteur"> </p>
+<h1 id="compteur"> <h1>
 <h1> astalavista !!! <h1>
 <img src="assets/kemarpirate.jpeg"> 
 <h1> aller tciao la compagnie ! <h1>
