--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
 </head>
 <body background="assets/background.gif">
 <audio src="image/musique.mp3" autoplay> camarchepas </audio>
-<h1> Bienvenue sur mon site anto.cool sur le WWW (world wide web)<h1>
+<h1> Bienvenue sur mon site anto.cool sur le WWW (world wide web)</h1>
 <img src="assets/singe.png"> 
-<h3> Î le singe FOU !!!i! (ce singe montre plusieurs signes de demence sevère) <h3>
+<h3> Î le singe FOU !!!i! (ce singe montre plusieurs signes de demence sevère) </h3>
 <h2> Je suis feru de jeux musicaux tel que 
 	<a href="https://scoresaber.com/u/76561198121730751&sort=1">beat saber</a>, 
 	<a href="https://etternaonline.com/user/lpanto"> etterna</a> ou encore
 	<a href="https://osu.ppy.sh/users/13001817"> le jeu de cercle osu </a>
 	ainsi qu'un aficionados inveteré.
-<h2>
-<h1> Temps restant avant l'hiver (ma saison préferé hihi ^^):<h1>
-<h1 id="compteur"> <h1>
-<h1> astalavista !!! <h1>
+</h2>
+<h1> Temps restant avant l'hiver (ma saison préferé hihi ^^):</h1>
+<p id="compteur"></p>
+<h1> astalavista !!! </h1>
 <img src="assets/kemarpirate.jpeg"> 
-<h1> aller tciao la compagnie ! <h1>
+<h1> aller tciao la compagnie ! </h1>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
