last push of the night
fixed css, other minor aestethic adjustments
also added divs

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	ainsi qu'un aficionados inveteré.
 </h2>
 
-<div class="">
+<div class="hiver">
 	<h1> Temps restant avant l'hiver (ma saison préferé hihi ^^):</h1>
 	<p id="compteur"></p>
 </div>
