--- a/index.html
+++ b/index.html
@@ -7,17 +7,37 @@
 <body background="assets/background.gif">
 <audio src="image/musique.mp3" autoplay> camarchepas </audio>
 
-<h1> Bienvenue sur mon site anto.cool sur le WWW (world wide web)</h1>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-6">
+			<h1> Bienvenue sur mon site anto.cool sur le WWW (world wide web)</h1>
+		</div>
+        <div class="col-sm-6 col-md-5">
+			<img src="assets/singetransp.png"> 
+			<h3> Î le singe FOU !!!i! (ce singe montre plusieurs signes de demence sevère) </h3>
+		</div>
+    </div>
+    <div class="row">
+        <div class="col-md-6">		
+			<h2> Je suis feru de jeux musicaux tel que 
+				<a href="https://scoresaber.com/u/76561198121730751&sort=1">beat saber</a>, 
+				<a href="https://etternaonline.com/user/lpanto"> etterna</a> ou encore
+				<a href="https://osu.ppy.sh/users/13001817"> le jeu de cercle osu </a>
+			mais aussi des jeux moins connu comme SDVX (,en bref, un aficionados.
+			</h2>
+		</div>
+        <div class="col-md-offset-1 col-md-4">
+			<h3> quelque unes de mes perfs absolument surhumaines : </h3>
+			<iframe width="420" height="315"
+			src="https://www.youtube.com/embed/dhCn3sDujO8">
+			</iframe>
+			<iframe width="420" height="315"
+			src="https://www.youtube.com/embed/dp3da5rnHEY">
+			</iframe>
+		</div>
+    </div>
+</div>
 
-<img src="assets/singe.png"> 
-<h3> Î le singe FOU !!!i! (ce singe montre plusieurs signes de demence sevère) </h3>
-
-<h2> Je suis feru de jeux musicaux tel que 
-	<a href="https://scoresaber.com/u/76561198121730751&sort=1">beat saber</a>, 
-	<a href="https://etternaonline.com/user/lpanto"> etterna</a> ou encore
-	<a href="https://osu.ppy.sh/users/13001817"> le jeu de cercle osu </a>
-	ainsi qu'un aficionados inveteré.
-</h2>
 
 <div class="hiver">
 	<h1> Temps restant avant l'hiver (ma saison préferé hihi ^^):</h1>
@@ -25,9 +45,9 @@
 </div>
 
 <div class="endofpage">
-<h1> astalavista !!! </h1>
-<img src="assets/kemarpirate.jpeg" alt="OUAIS !!!" class="center">> 
-<h1> aller tciao la compagnie ! </h1>
+	<h1> astalavista !!! </h1>
+	<img src="assets/kemarpirate.jpeg" alt="OUAIS !!!" class="center">> 
+	<h1> aller tciao la compagnie ! </h1>
 </div>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
