--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="col-sm-6">
 			<h1> Bienvenue sur mon site anto.cool sur le WWW (world wide web)</h1>
 		</div>
-        <div class="col-sm-6 col-md-5">
+        <div class="col-sm-6">
 			<img src="assets/singetransp.png"> 
 			<h3> Î le singe FOU !!!i! (ce singe montre plusieurs signes de demence sevère) </h3>
 		</div>
