--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<a href="https://scoresaber.com/u/76561198121730751&sort=1">beat saber</a>, 
 				<a href="https://etternaonline.com/user/lpanto"> etterna</a> ou encore
 				<a href="https://osu.ppy.sh/users/13001817"> le jeu de cercle osu </a>
-			mais aussi des jeux moins connu comme SDVX (,en bref, un aficionados.
+			mais aussi des jeux moins connu comme SDVX et BMS (ainsi qu'un aficionados.
 			</h2>
 		</div>
         <div class="col-md-offset-1 col-md-4">
