--- a/index.html
+++ b/index.html
@@ -11,12 +11,16 @@
     <div class="row">
         <div class="col-sm-6">
 			<h1> Bienvenue sur mon site anto.cool sur le WWW (world wide web)</h1>
+			<img src="assets/lpanto.png" id="moi">
 		</div>
         <div class="col-sm-6">
 			<img src="assets/singetransp.png"> 
-			<h3> Î le singe FOU !!!i! (ce singe montre plusieurs signes de demence sevère) </h3>
+			<h3> ↑ le singe FOU !!!i! (ce singe montre plusieurs signes de demence sevère) </h3>
 		</div>
     </div>
+	<div class="row">
+	<h1> Titre</h1>
+	</div>
     <div class="row">
         <div class="col-md-6">		
 			<h2> Je suis feru de jeux musicaux tel que 
@@ -25,6 +29,9 @@
 				<a href="https://osu.ppy.sh/users/13001817"> le jeu de cercle osu </a>
 			mais aussi des jeux moins connu comme SDVX et BMS (ainsi qu'un aficionados.
 			</h2>
+			
+			<img src="assets/moi.png" id="moi">
+			<h3> moi </h3>			
 		</div>
         <div class="col-md-offset-1 col-md-4">
 			<h3> quelque unes de mes perfs absolument surhumaines : </h3>
@@ -46,8 +53,13 @@
 
 <div class="endofpage">
 	<h1> astalavista !!! </h1>
-	<img src="assets/kemarpirate.jpeg" alt="OUAIS !!!" class="center">> 
+	<img src="assets/kemarpirate.jpeg" alt="OUAIS !!!" class="center" width="500" height="300"> 
 	<h1> aller tciao la compagnie ! </h1>
+	<div><img src="assets/antopfp.png" style="float: left;" id="pdp">
+	<h2> a+ sur le cyberweb </h2>
+	<h3> a+ sur le cyberweb </h3>
+	<h4> a+ sur le cyberweb </h4>
+	</div>
 </div>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
