--- a/qr/index.html
+++ b/qr/index.html
@@ -2,9 +2,9 @@
 <head>
 	<title>Loop.</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-	<link rel="stylesheet" href="main.css">
+	<link rel="stylesheet" href="C:\_Code\git\anto.cool\main.css">
 </head>
-<body background="C:\_Code\git\anto.cool\assets/fart.png">
+<body background="C:\_Code\git\anto.cool\assets\fart.png">
 
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
