--- a/sympa/index.html
+++ b/sympa/index.html
@@ -2,7 +2,7 @@
 <head>
 	<title>very cool website</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-	<link rel="stylesheet" href="main.css">
+	<link rel="stylesheet" href="C:\_Code\git\anto.cool\main.css">
 </head>
 <body background="C:\_Code\git\anto.cool\assets/background.gif">
 <audio src="image/musique.mp3" autoplay> camarchepas </audio>
