--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="col-sm-6">
 			<h1> Bienvenue sur mon site anto.cool sur le WWW (world wide web)</h1>
 			<img src="assets/lpanto.png" id="moi">
-			<h><a href="https://twitter.com/antolpi"> Mon twitter (je suis tres actif oui)</a></h2>
+			<h2><a href="https://twitter.com/antolpi"> Mon twitter (je suis tres actif oui)</a></h2>
 		</div>
         <div class="col-sm-6">
 			<img src="assets/singetransp.png"> 
